--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
   </head>
   <body>
     <div class="glass-pane">WINDOW</div>
+    <div class="clas">
+      <script></script>
+    </div>
   </body>
 </html>
