--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Glass effect in css</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+
     <style>
       body {
         background-image: url(http://bit.ly/2gPLxZ4); //add "" if you want
@@ -29,7 +34,7 @@
   </head>
   <body>
     <div class="glass-pane">
-      <button>Click me</button>
+      <button class="btn btn-success">Click me</button>
     </div>
   </body>
 </html>
